update api and swagger
